# SURGE-2048

./: .gitignore  CMakeLists.txt  README.md  config.ini  config.yaml
2048/: CMakeLists.txt
2048/include/: 2048.hpp  board.hpp  debug_window.hpp  pieces.hpp  player  type_aliases.hpp  ui.hpp
2048/src/: 2048.cpp  board.cpp  conversions.cpp  debug_window.cpp  pieces.cpp  ui.cpp
